styles.css
@font-face {
  font-family: "Light";
  src: url("fonts/helvetica/HelveticaNeueCyr-Light.otf");
}

@font-face {
  font-family: "Medium";
  src: url("fonts/helvetica/HelveticaNeueCyr-Roman.otf");
}

@font-face {
  font-family: "Bold";
  src: url("fonts/helvetica/HelveticaNeueCyr-Bold.otf");
}

@font-face {
  font-family: "Heavy";
  src: url("fonts/helvetica/HelveticaNeueCyr-Heavy.otf");
}

@font-face {
  font-family: "Gothic";
  src: url("fonts/letter/LetterGothicStd.otf");
}

@font-face {
  font-family: "Gothic Bold";
  src: url("fonts/letter gothic/LetterGothicStd-Bold.otf");
}

body {
  margin: 30px;
}

.container {
  width: 100%;
  max-width: 100%;
  overflow-x: hidden;
  border-bottom: solid 1px grey;
  font-weight: 100;
}


#filters {
  font-family: "Medium", sans-serif;
  width: 50%;
}

#page-title {
  float: right;
  font-family: light;
  font-weight: 1px;
  font-size: medium;
  width: 30%;
  text-align: right;
  padding: 0;
  margin-bottom: 12px;
  color: grey;
}

.filterSelector {
  width: 60px;
  border: none;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  outline: none;
  padding: 12px 9px;
  background-color: #f1f1f1;
  cursor: pointer;
  font-weight: 100;
  font-family: "Medium", sans-serif;
  color: grey;
  margin-bottom: 5px;
}

.filterSelector:hover {
  background-color: #ddd;
  color: black;
}

.filterSelector.active {
  background-color: #EDEADE;
  font-family: "medium", sans-serif;
  color: black;
}

.tab {
  float: left;

  background-color: white;
  color: black;
  font-weight: 100;
  line-height: 45px;

  width: 100%;
  text-align: left;
  display: none;
  /* box-shadow: 0 8px 6px 6px black; */
}

.tab:hover {
  background-color: #eeeeee;
}

.tab.active {
  background-color: #eeeeee;
}

.tab.active:hover {
  background-color: #eeeeee;
}

.hover-img {
  display: none;
  position: absolute;
  height: 45vh;
  opacity: 95%;
  border: black 1px solid;
  top: 0;
  left: 0;
  transform: translate(0%, 0%);
}

.tab:hover .hover-img {
  display: unset;
}

.tab.active:hover .hover-img {
  display: none;
}

.tab-details {
  border-collapse: collapse;
  color: grey;
  text-decoration: none;
  font-family: "Light";
  width: 100%;
}

.tab-details tr {
  border-left: 1px solid grey;
  border-right: 1px solid grey;
  border-top: grey solid 1px;
}

.tab-details tr td {
  padding: 0px 10px;
  font-family: "light", sans-serif;
  color: grey;
}

.tab-details tr .title {
  border-left: 1px solid grey;
  border-right: 1px solid grey;
  width: 1000px;
  transition: width 0.3s ease-in-out;

}

.tab-details tr .date {
  border-left: 1px solid grey;
  border-right: 1px solid grey;
  width: 50px;
  transition: width 0.3s ease-in-out;
}

.tab-details tr .type {
  border-left: 1px solid grey;
  border-right: 1px solid grey;
  display: 10px;
  transition: width 0.3s ease-in-out;
}


.active .tab-details tr .title {
  border-right: 1px solid lightgrey;

}

.active .tab-details tr .date {
  border-left: 1px solid lightgrey;
  border-right: 1px solid lightgrey;
}

.active .tab-details tr .type {
  border-left: 1px solid lightgrey;
}

.tab-details tr:hover td {
  color: black;
  cursor: default;
  font-family: "medium", sans-serif;
  color: black;
  font-weight: 100px;
  cursor: pointer;
  background-color: #fafafa;
}

.tab-details tr:hover {
  cursor: pointer;
}

.tab.active td {
  transition: 0.1s;
  cursor: default;
  font-family: "light", sans-serif;
  background-color: #fafafa;
}

.tab.active .tab-details td {
  color: black;
  font-family: "medium", sans-serif;
}

.tab.active .project-text {
  border-top: lightgrey solid 1px;
}

.project-info {
  max-height: 0;
  transition: max-height 0s ease-in-out;
  overflow: hidden;
  height: auto;
  background-color: white;
  border-left: 1px solid grey;
  border-right: 1px solid grey;
}

.tab.active .project-info {
  max-height: 1500px;
}

.project-info table {
  border-collapse: collapse;
  width: 100%;
}

.project-text td {
  padding: 20px 20px;
  line-height: 30px;
  font-family: "light", sans-serif;
  vertical-align: top;
  color: darkgrey;
}

.abstract {
  width: 1000px;
  transition: width 0.3s ease-in-out;
  color: grey;
}

.project-gallery {
  overflow-x: scroll;
  white-space: nowrap;
  border-top: grey solid 1px;
  border-color: #e0e0e0;
  padding: 20px;
  background-color: white;
  display: flex;
  /* justify-content: space-between; */
  gap: 15px;
}

.darkgallery {
  overflow-x: scroll;
  white-space: nowrap;
  border-top: grey solid 1px;
  border-color: #e0e0e0;
  padding: 20px;
  background-color: black;
  display: flex;
  /* justify-content: space-between; */
  gap: 15px;
}

.project-gallery .small-img:hover {
  border: 1px solid grey;
  /* border: 1px solid #EDEADE; */
}

.darkgallery .small-img:hover {
  border: 1px solid lightgrey;
  /* border: 1px solid #EDEADE; */
}

.project-gallery .small-img {
  height: 400px;
  border: 1px solid lightgrey;
  cursor: pointer;
  transition: height .2s ease;
}

.darkgallery .small-img {
  height: 400px;
  border: 1px solid grey;
  cursor: pointer;
  transition: height .2s ease;
}

/* .project-gallery .big-img {
  height: auto;
  width: auto;
  border: 1px solid lightgrey;
  cursor: pointer;
  transition: height .2s ease;
  z-index: 100;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 100;
  max-width: 85%;
  max-height: 85%;
}

.darkgallery .big-img {
  height: auto;
  width: auto;
  border: 1px solid lightgrey;
  cursor: pointer;
  transition: height .2s ease;
  z-index: 100;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 100;
  max-width: 85%;
  max-height: 85%;
} */


.model {
  display: block;
  position: relative;
  margin-left: 50px;
  margin-right: 50px;
  margin-top: 50px;
  margin-bottom: 50px;
  height: 47vw;
  width: 95%;
}

#lightbox {
  position: fixed;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 100%;
  background-color: rgba(255, 255, 255, 0.8);

  display: none;
}

#lightbox-img {
  height: auto;
  width: auto;
  border: 1px solid lightgrey;
  cursor: pointer;
  transition: height .2s ease;
  z-index: 100;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 100;
  max-width: 85%;
  max-height: 85%;
  display: none;
}

.show {
  display: block;
}

@media screen and (max-width: 1550px) {

  .title {
    max-width: 700px;
  }

  .abstract {
    max-width: 700px;
  }
}

@media screen and (max-width: 1040px) {

  .title {
    max-width: 400px;
  }

  .abstract {
    max-width: 400px;
  }

  .filterSelector {
    width: 50px;
  }
}

@media screen and (max-width: 850px) {
  #page-title {
    width: 40%;
    /* float: none; */
    /* margin-bottom: 0px; */
    /* margin-top: 0; */
    /* text-align: center; */
  }

  #filters {
    width: auto;
  }


  .title {
    max-width: 350px;
  }
}

@media screen and (max-width: 700px) {
  #page-title {
    display: none;
  }

  #filters {
    margin-bottom: 12px;
    width: 100%;
  }

  .filterSelector {
    margin-top: 0;
    width: 40px;
    margin-bottom: 0px;
    margin-top: 5px;
  }

  .title {
    max-width: 250px;
  }

  .date {
    min-width: 50px;
  }

  .active .tab-details tr .date {
    border-right: 1px solid grey;
  }

  .type {
    display: none;
  }

  .abstract {
    width: 100%;
  }

  .additional-description {
    display: none;
  }

  .tab:hover .hover-img {
    display: none;
  }

  .project-gallery .small-img {
    height: 400px;
    cursor: pointer;
  }

  .darkgallery .small-img {
    height: 400px;
    cursor: pointer;
  }


  /* .project-gallery .big-img {
    height: 400px;
    cursor: pointer;
    width: unset;
    z-index: none;
    position: unset;
    top: none;
    left: none;
    transform: none;
    max-width: unset;
  }

  .darkgallery .big-img {
    height: 400px;
    cursor: pointer;
    width: unset;
    z-index: none;
    position: unset;
    top: none;
    left: none;
    transform: none;
    max-width: unset;
  } */
}

/* @media (any-pointer: coarse) {} */

